--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="des-container">
         <h2 class="unit-heading">Mass (Kilograms/Pounds)</h2>
-        <p class="unit-des" id="mass">1 kilos = 2.205 undefined | 1 undefined = 0.454 kilos</p>
+        <p class="unit-des" id="mass">1 kilos = 2.205 pounds | 1 pounds = 0.454 kilos</p>
     </div>
 
 
